Fix gap error between dashboard cards

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -18,6 +18,18 @@ a { text-decoration: none!important; color: var(--fd-color-blue)}
 .login-image { background-image: url("/static/img/login-icon-02.png"); background-repeat: no-repeat; background-position: top right;}
 .profile-img { width: 30px; height: 30px; border-radius: 20px;}
 .card-img { background-color: #EDF4FF;} .card-img img { width : 50px; height: 50px;}
+.d-grid { display: grid;}
+.grid-3 { grid-template-columns: 3fr 3fr 3fr;} .grid-4 { grid-template-columns: 3fr 3fr 3fr 3fr;}
+.grid-2 { grid-template-columns: 6fr 6fr} .grid-0 { grid-template-columns: 12fr} 
+
+@media (min-width: 992px) {
+    .grid-lg-3 { grid-template-columns: 3fr 3fr 3fr!important;}
+    .grid-lg-4 { grid-template-columns: 3fr 3fr 3fr 3fr!important;}
+    .grid-lg-2 { grid-template-columns: 6fr 6fr!important}
+    .grid-lg-0 { grid-template-columns: 12fr!important} 
+  
+  }
+
 /* .login-form::-webkit-scrollbar { width: 5px; }
 .login-form ::-webkit-scrollbar-track { box-shadow: inset 0 0 2px var(--fd-color-silver); border-radius: 5px;}
 .login-form::-webkit-scrollbar-thumb { background: var(--bs-white); border-radius: 10px;} */
